# avarex_llama

./: .gitignore  .gitmodules  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  application.yaml  build-windows-dist.ps1  pubspec.yaml  test.sh
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/avarex_llama_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  vaden_application.dart
example/lib/config/: app_configuration.dart
example/lib/config/openapi/: openapi_configuration.dart
example/lib/src/: llama_controller.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: avarex_llama.podspec
ios/Classes/: avarex_llama.c
lib/: avarex_llama.dart  avarex_llama_bindings_generated.dart  dllama.dart  dllama_bindings_generated.dart  llama_engine.dart
linux/: CMakeLists.txt
macos/: avarex_llama.podspec
src/: CMakeLists.txt  avarex_llama.c  avarex_llama.cpp  avarex_llama.h  avarex_llama.hpp  dllama.cpp  dllama.h  test.sh
windows/: CMakeLists.txt
